--- a/_quarto.yml
+++ b/_quarto.yml
@@ -19,7 +19,10 @@ website:
 
 format:
   html:
-    theme: cosmo
-    css: styles.scss
-    toc: true
+    theme:
+      light: yeti
+      dark: cyborg
+    css: styles.css
+
+
 
